fixed a wrap text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,11 @@
     cursor: pointer;
 }
 
+.new_li {
+    max-width: 500px;
+    word-wrap: break-word;
+}
+
 li {
     word-break: normal;
     list-style: none;
